# 389ds-log-analyser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py  data_model.py  log_parser.py
test-files/: access-2
tests/: test_cli.py  test_data_model.py  test_installation.py  test_parser.py
