[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldap-log-parser-389-ds"
version = "1.0.0"
authors = [
  { name="Thomas Weiss", email="weiss@puzzle-itc.de" },
]
description = "A parser and query tool for 389 Directory Server access logs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
ldap-log-parser = "cli:main"

