[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "389ds-log-analyser"
version = "1.1.1"
authors = [
  { name="Thomas Weiss", email="weiss@puzzle-itc.de" },
]
description = "A parser and query tool for 389 Directory Server access logs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "build>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "data_model", "log_parser"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
389ds-log-analyser = "cli:main"
389ds-src-ip-table = "cli:main_src_ip_table"
389ds-open-connections = "cli:main_open_connections"
389ds-unique-clients = "cli:main_unique_clients"
389ds-unindexed-searches = "cli:main_unindexed_searches"

